--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
           <strong>문의:</strong> <a href="mailto:recthealpha@gmail.com">recthealpha@gmail.com</a><br/>
           <strong>지원 마감:</strong> 상시 모집 중
         </p>
-        <button class="joinus-btn" onclick="window.location.href='https://forms.gle/63GMxPfT2um6Vuwx8';">지금 바로 지원하기</button>
+        <button class="joinus-btn" /*onclick="window.location.href='https://forms.gle/63GMxPfT2um6Vuwx8';" */ >현재는 메일을 통한 문의와 지원만 받습니다.</button>
       </div>
     </section>
 
